# SciContext

./: .gitignore  Pipfile  README.md  db.sqlite3  pyproject.toml  setup.cfg  setup.py
.github/workflows/: actions.yml
config/: asgi.py  functions.py  git_functions.py  langs.py  models.py  ols_functions.py  settings.py  svr_functions.py  testing.py  urls.py  wsgi.py
contexts/: admin.py  apps.py  example.py  tests.py  urls.py  views.py
contexts/migrations/: 0001_initial.py  0002_contexts_project.py  0003_alter_contexts_base_alter_contexts_description_and_more.py  0004_contexts_language.py
contexts_fields/: apps.py
contexts_fields/migrations/: 0001_initial.py  0002_remove_contextsfields_term_contextsfields_field_and_more.py
ctxs/: crg_substance.jsonld
ctxs/example/: README.md  sub-ctx.jsonld  sub-file.jsonld
fields/: apps.py  urls.py  views.py
fields/migrations/: 0001_initial.py  0002_remove_fields_cardinality_remove_fields_unit_and_more.py  0003_remove_fields_newname.py
nspaces/: apps.py  urls.py  views.py
nspaces/migrations/: 0001_initial.py
onts/: apps.py  urls.py  views.py
onts/migrations/: 0001_initial.py  0002_onts_delete_nspaces.py  0003_alter_onts_options_onts_description.py  0004_onts_trmcnt.py  0005_onts_version.py
projects/: urls.py  views.py
projects/migrations/: 0001_initial.py
servers/: urls.py  views.py
servers/migrations/: 0001_initial.py  0002_servers_type.py  0003_servers_apikey.py
static/css/: scicontext.css  sciflow.css
templates/: base.html  home.html
terms/: urls.py  views.py
tests/: test.py
(+33 files in other folders)
