[tool.poetry]
name = "SciContext"
version = "0.1"
description = "Python workflow system for processing and ingesting SciData JSON-LD files into a graph DB"
authors = [
    "Stuart Chalk <schalk@unf.edu>",
    "Dylan Johnson <n01448636@unf.edu>",
]

[tool.poetry.dependencies]
python = "^3.6"
#pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
