[metadata]
name = SciContext
version = 0.1
url = https://github.com/chalklab/SciContext
author = 'Stuart Chalk'
author_email = 'schalk@unf.edu'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Python/Django package for processing of SciData JSON-LD files
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.12

[flake8]
 # add options
ignore = E402,E501,F403,F405
